--- a/styles/episodes-list.css
+++ b/styles/episodes-list.css
@@ -25,10 +25,30 @@ body {
 	justify-content: flex-start;
 	align-items: center;
 
-  width: 100%;
-  height: 100%;
+	margin: 0;
+	width: 90%;
+	min-height: 100px;
 }
 .episodes__title {
 	margin: 0;
 	padding: 30px;
+}
+
+
+/* episode item */
+.episode {
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: flex-start;
+	align-items: center;
+
+	width: 100%;
+	height: 50px;
+	background-color: #020202;
+	box-shadow: 0px 0px 20px #101010;
+}
+.episode__number {
+	
+}
+.episode__title {
 }
